--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,18 +1,29 @@
-@import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Gidole&family=Rambla:ital,wght@0,400;0,700;1,400;1,700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import 'tailwindcss';
+
+/* Fonts
+    Gidole
+    Rambla
+    Ubuntu
+*/
+
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+    --background: #ffffff;
+    --foreground: #171717;
 }
 
+/* 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #000000;
-    --foreground: oklch(0.81 0.185 208.59);
+    --foreground: #ffffff;
   }
-}
+} */
 
 body {
-  background: var(--background);
-  color: var(--foreground);
+    font-size: 3.2vw;
+    font-family: 'Rambla';
+    background: var(--background);
+    color: var(--foreground);
 }
