--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,10 +7,10 @@
     Ubuntu
 */
 
-
 :root {
     --background: #ffffff;
     --foreground: #171717;
+    --small-mult: 1;
 }
 
 /* 
@@ -21,8 +21,14 @@
   }
 } */
 
+@media screen and (max-width: 800px) {
+    :root {
+        font-size: 0.75rem;
+        --small-mult: 0.5;
+    }
+}
+
 body {
-    font-size: 3.2vw;
     font-family: 'Rambla';
     background: var(--background);
     color: var(--foreground);
