popup partially completed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,7 +11,9 @@
     --background: #ffffff;
     --foreground: #171717;
     --flavor: #2c19ff;
+    --center: 960px;
     font-size: 1.1rem;
+    scrollbar-width: thin;
 }
 
 
@@ -36,3 +38,23 @@ body {
     background: var(--background);
     color: var(--foreground);
 }
+
+.loading {
+    width: 48px;
+    height: 48px;
+    border: 5px solid #FFF;
+    border-bottom-color: #FF3D00;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+    }
+
+    @keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+    } 
