scrolling name protype

--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -1,11 +1,126 @@
 ---
-import Layout from '@pages/en/layout-en.astro';
-import Banner from '@src/components/Banner.astro';
+import Layout from "@pages/en/layout-en.astro";
+import Banner from "@src/components/BannerRev.astro";
 ---
 
+<script>
+    const header = document.getElementById("header")!;
+    header.style.display = "none";
+</script>
 <Layout>
     <head>
         <title>Garutako</title>
     </head>
     <Banner />
+    <div>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt
+        suscipit quod fuga amet aut provident. Esse vel perferendis nemo
+        pariatur asperiores nesciunt ut, eveniet, commodi soluta nulla sit
+        obcaecati eaque inventore error. Beatae, repellat voluptate? Ratione
+        consequatur voluptatem provident sit culpa! Mollitia odit iste
+        laudantium dicta eaque totam autem laborum molestiae error sapiente
+        quae, aliquid dolor excepturi quos cum? Sint consequuntur eveniet
+        dolorem eligendi deserunt nisi soluta! Ratione laborum perferendis
+        voluptate ipsam neque tempora iure beatae reiciendis distinctio
+        mollitia, obcaecati quia fuga, vero, maiores nihil consequuntur dicta
+        commodi? Nobis enim similique qui cupiditate blanditiis aliquam. Atque
+        impedit in non sapiente quis, sint natus optio laborum molestiae
+        excepturi quibusdam provident corporis deserunt veritatis nulla!
+        Laudantium numquam cupiditate perferendis temporibus facilis tempora
+        sequi at quasi corporis placeat minus repellat dicta error, hic sit
+        asperiores qui consequatur eum provident? Ratione, expedita ipsum hic
+        alias beatae nisi veniam nulla officia ea, nobis sunt doloremque cumque!
+        Harum, consequuntur doloribus, nam animi esse repudiandae voluptates,
+        maxime et modi aperiam quas consequatur expedita quod eum similique
+        libero molestiae quia totam? Debitis accusamus consequatur sit earum
+        laborum ad eos dolores saepe quod porro fuga cum perspiciatis dicta ut
+        eaque laudantium, natus animi magni distinctio aperiam, voluptatibus
+        adipisci fugit dolorem obcaecati! Deleniti at harum magni hic ad quos.
+        Libero iusto reprehenderit molestias consequuntur a rem obcaecati illum,
+        ratione, explicabo nulla quo soluta, veniam sint beatae autem. Dolorum
+        ullam expedita error facere possimus in dolores quisquam explicabo unde,
+        nesciunt a inventore blanditiis quaerat. Eaque aut aliquid eveniet in
+        maiores quas quia nisi rem et molestiae, vero est minus. Ad accusantium
+        ab sapiente velit molestias consequuntur odit rerum, optio officiis
+        animi tenetur explicabo quis incidunt. Quasi totam a sit modi dicta,
+        impedit ipsa laudantium. Consequuntur incidunt laboriosam omnis officia.
+        Reiciendis, incidunt voluptates enim quod sapiente culpa deleniti quia
+        molestiae nulla odio. Hic, aspernatur. Sit quidem fuga ea quis officia
+        natus earum repudiandae iure quam illum dolorum rem delectus quibusdam
+        voluptas excepturi recusandae dolorem ab perspiciatis maiores
+        praesentium, ipsa quae culpa distinctio! Amet dolore dolores aperiam
+        corporis molestias, voluptatum ullam adipisci omnis totam optio
+        asperiores laborum sit quibusdam ducimus quod fuga sapiente suscipit
+        debitis modi. Incidunt quisquam perspiciatis, ipsum nemo sint maiores
+        eveniet odio assumenda ex neque sapiente iure officiis iusto quia ut
+        voluptate nostrum quae qui, architecto excepturi voluptatem adipisci.
+        Quibusdam debitis magnam voluptatem, quidem reiciendis veritatis
+        asperiores. Mollitia voluptate obcaecati, quod sed tempore reiciendis
+        voluptates necessitatibus ratione iste quasi, provident, quos et minima
+        magnam vero! Amet itaque sed doloribus atque repellat eaque ducimus est,
+        cumque tenetur asperiores, quisquam minima nulla accusamus deserunt
+        praesentium perspiciatis debitis vitae! Laudantium aut nulla eligendi
+        eum dolorem harum illum delectus modi quisquam, sit reiciendis itaque
+        odit. Dolores accusamus dicta reiciendis obcaecati ab ex porro, soluta
+        fugit sapiente, esse quaerat ea vel tempora nostrum ipsa velit minima
+        odit dolorum adipisci, quae sequi mollitia. Adipisci debitis, et quo
+        rerum harum hic deserunt minima similique itaque inventore aliquid
+        ratione soluta ab quasi cupiditate aliquam, repudiandae atque corrupti
+        explicabo nihil ex. Officiis, totam, magnam obcaecati enim vel debitis
+        quos dignissimos eligendi provident, unde ea odit quam fugiat est rem?
+        Vitae impedit magnam saepe iusto, iste aspernatur nam pariatur cum
+        accusantium laudantium, soluta tenetur officiis! Temporibus et ullam ut
+        ducimus, minus sapiente dolorem quibusdam, placeat deserunt excepturi ad
+        saepe inventore! Quam ratione quibusdam nihil eveniet quod facilis,
+        laborum eligendi quaerat autem maiores velit at commodi assumenda fugit
+        vel deleniti recusandae magnam ex amet tempore, numquam laudantium ullam
+        asperiores! Cupiditate, ducimus dolores sapiente sed voluptates enim
+        repellat recusandae. Dolor, exercitationem! Veniam enim aperiam qui
+        molestiae non, aut officiis hic quia voluptatum eveniet ullam suscipit
+        distinctio deleniti cupiditate quasi aliquid, dolor assumenda eos? Alias
+        nemo ipsum numquam veniam incidunt eos autem quod sunt quidem? Veniam
+        quam qui quia officiis alias eius, perferendis necessitatibus eaque
+        magni ipsam vitae in facere aut voluptas magnam obcaecati? Optio,
+        quaerat? Possimus perspiciatis veritatis, voluptatibus odio earum, ut
+        nesciunt vero delectus optio vel maiores nostrum eaque quas ducimus
+        veniam fuga officiis consequatur natus minus dolores! Nobis rerum nam ad
+        doloribus aperiam odit error in. Magni minima quos totam. Earum sint,
+        aut, ipsa corporis atque pariatur impedit expedita distinctio velit esse
+        ea quas necessitatibus assumenda exercitationem illo dicta voluptatum,
+        eveniet magni. Accusamus deleniti laudantium iste, expedita quas
+        dignissimos dolores aliquid commodi odio nostrum animi maiores magni
+        facilis error! Numquam sint magni doloremque, veniam laboriosam,
+        repellat consectetur reprehenderit voluptatibus et voluptates officia
+        quis assumenda voluptate eius vitae ratione asperiores aut iusto dolores
+        quibusdam! Fugiat, ullam itaque a quos nostrum maxime. Minima mollitia
+        totam id dolor, excepturi molestiae suscipit ea consequatur neque, earum
+        fugiat voluptate inventore quisquam repellendus atque eius tenetur
+        debitis velit ipsa sapiente. Optio possimus quidem cumque perferendis
+        aperiam nisi obcaecati ratione est earum, reprehenderit facilis a sed
+        atque non animi! Odio reprehenderit, tempora quibusdam eius eligendi
+        necessitatibus quas dolore repellat. Dolore odio corporis sed nam
+        perferendis voluptatum in amet numquam distinctio, doloremque similique,
+        quisquam adipisci nemo, quaerat ipsam? Provident reprehenderit dolorem
+        accusamus. Officia fugit amet illum perspiciatis iure quisquam? Eligendi
+        debitis fuga at atque commodi esse ratione dicta iure veritatis
+        doloribus officia corporis optio quo tenetur amet sunt provident
+        voluptates doloremque fugiat, autem maiores iste voluptas. Similique,
+        consectetur quo beatae provident quibusdam optio id quasi animi, cumque
+        asperiores iusto in consequuntur nobis itaque voluptatum recusandae,
+        autem necessitatibus dicta pariatur illo minima? Perferendis sapiente
+        dolor incidunt. Provident, et soluta! Architecto ipsa repellendus illo,
+        pariatur nostrum voluptatum quos excepturi cupiditate dignissimos odit
+        quibusdam recusandae voluptas itaque a voluptatibus delectus tenetur
+        nobis adipisci mollitia eaque earum soluta tempore assumenda quia?
+        Inventore totam, ducimus dolor rem, impedit unde et quam reiciendis
+        architecto repellat rerum minima ad sed sapiente. Repellat est similique
+        tempora repudiandae beatae ut quos, veritatis officiis, eum ducimus
+        labore esse nemo eligendi nisi cum itaque explicabo tempore ex nesciunt
+        numquam facere temporibus? Accusamus quae soluta consectetur praesentium
+        expedita atque nisi similique porro assumenda architecto officiis harum
+        corrupti, quos tempore odio quidem optio pariatur enim eum rerum
+        incidunt maiores magni commodi! Voluptatibus dignissimos illo animi,
+        nulla suscipit quisquam aspernatur corporis quis vel enim doloremque
+        vero dicta error ducimus adipisci eum harum?
+    </div>
 </Layout>
