--- a/src/pages/fr/index.astro
+++ b/src/pages/fr/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '@pages/fr/layout-fr.astro';
-import Banner from '@components/Banner.astro';
+import Banner from '@components/BannerRev.astro';
 ---
 
 <Layout>
