--- a/src/pages/en/layout-en.astro
+++ b/src/pages/en/layout-en.astro
@@ -32,7 +32,7 @@ const pathName = Astro.url.pathname;
             </div>
         </div>
         <div class='flex justify-center items-center'>
-            <div id='page-container' class='w-full mx-3 py-5 px-5'>
+            <div id='page-container' class='w-full mx-3 px-5'>
                 <slot />
             </div>
         </div>
