--- a/src/pages/fr/layout-fr.astro
+++ b/src/pages/fr/layout-fr.astro
@@ -1,6 +1,5 @@
 ---
 import '@src/global.css';
-import '@fontsource/major-mono-display';
 const pathName = Astro.url.pathname;
 ---
 
@@ -32,7 +31,7 @@ const pathName = Astro.url.pathname;
             </div>
         </div>
         <div class='flex justify-center items-center'>
-            <div id='page-container' class='w-full mx-3 py-5 px-5'>
+            <div id='page-container' class='w-full mx-3 px-5'>
                 <slot />
             </div>
         </div>
